# restapi-to-azure-data-factory

./: .gitignore  README.md
CoinGecko/: .gitignore  coingecko_to_azure.py  crypto_json_to_sql.py  pyproject.toml
