[project]
name = "coingecko"
version = "0.1.0"
description = ""
authors = [
    {name = "FangQijun",email = "frank_fang2011@live.cn"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "azure-storage-blob (>=12.25.1,<13.0.0)",
    "pymssql (>=2.3.4,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "coingecko", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
